weather resonse correctly changed to array
