# pkg/model/model.gen.go
@@ -63,7 +63,7 @@ type OpenWeatherMapResponse struct {
 	Visibility float64                      `json:"visibility"`
 
 	// Weather Open Weather API Weather Data.
-	Weather OpenWeatherMapResponseWeather `json:"Weather"`
+	Weather []OpenWeatherMapResponseWeather `json:"weather"`
 
 	// Wind Open Weather API Wind Data.
 	Wind OpenWeatherMapResponseWind `json:"Wind"`
@@ -180,13 +180,13 @@ type OpenWeatherMapResponseWind struct {
 // WeatherConditionGetParameters Weather Web App Parameters for Get Weather Data
 type WeatherConditionGetParameters struct {
 	// AppId OpenWeatherMap API ID/Key generated by signing up to use their APIs
-	AppId string `json:"appid"`
+	AppId *string `json:"appid"`
 
 	// Latitude latitude of location on earth to get weather data for
-	Latitude float64 `json:"lat"`
+	Latitude *float64 `json:"lat"`
 
 	// Longitude longitude of location on earth to get weather data for
-	Longitude float64 `json:"lon"`
+	Longitude *float64 `json:"lon"`
 }
 
 // WeatherConditionGetResponse Weather Web App Parameters for Get Weather Data
